# simple_pybind_example

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  azure-pipelines.yml  environment.devenv.yml  environment.yml  setup.py
.azure-templates/: linux.yml  win.yml
example/: example.cpp
python_package/: foo_module.py
python_package/_cpp_package/: CMakeLists.txt  example_cpp.cpp  example_cpp.hpp
python_package/bindings/: CMakeLists.txt  bindings.cpp
python_package/cpp_package/: bindings.cpp  example_cpp.cpp  example_cpp.hpp
tests/: test_foo.py
